--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     },
     "dependencies": {},
     "devDependencies": {
-        "@types/node": "^14.6.4"
+        "@types/node": "^14.6.4",
+        "typescript": "^4.0.3"
     }
 }
