--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
     "scripts": {
         "start": "tsc -w"
     },
-    "dependencies": {},
+    "dependencies": {
+        "yargs": "^16.0.3"
+    },
     "devDependencies": {
         "@types/node": "^14.6.4",
+        "@types/yargs": "^15.0.7",
         "typescript": "^4.0.3"
     }
 }
